make facade for the new api
